<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="50dp"
        android:id="@+id/add"
        android:orientation="vertical">

        <TextView
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Add a record"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Systolic"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/addSystolic"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Diastolic"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:padding="10dp"
            android:id="@+id/addDiastolic"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Heart Rate"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:singleLine="true"
            android:padding="10dp"
            android:id="@+id/addHeartRate"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Measured date"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            android:hint="DD-MM-YYYY"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Measured time"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:padding="10dp"
            android:id="@+id/time"

            android:hint="HH:MM AM/PM"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Comment"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:padding="10dp"
            android:id="@+id/addComment"
            tools:ignore="MissingPrefix" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/addRecord"
            android:text="Add"
            android:textColor="@color/white"
            android:layout_marginTop="40dp" />

    </LinearLayout>
</ScrollView>